syntax = "proto3";

package boss;

service CategoryService {
  rpc  FindAllJobCategory(Empty) returns (FindAllJobCategoryResponse);
  rpc  FindJobByCategory(FindJobByCategoryeRequest) returns (FindJobByCategoryResponse);
}



message FindAllJobCategoryResponse {

}

message FindJobByCategoryeRequest {
  string categoryId = 1;
}

message FindJobByCategoryResponse {

}
